--- a/_posts/2024-06-09-TECH6363-Assignment-10.markdown
+++ b/_posts/2024-06-09-TECH6363-Assignment-10.markdown
@@ -23,46 +23,35 @@ For this week's assignment we created a list of resources to use
 
 Having a curated list of exceptional resources of technology uses in classroom is a huge help for everyone. For teachers, a guide can help find activities to do. For administrators, a vetting process can be done to assure compliance with local regulations. For students and parents, a list of resources can help if there is technology requirements or knowledge that is needed to be productive in the classroom. Unfortunately, technology changes so quickly that guides need to be constantly updated. Here are ten sources that are relevant to help with guiding technology lessons. 
 
-# Casanova, D., Huet, I., & Garcia, F. (2023). The Experience of Co-Designing a Learning Space with Teachers and Students. Education Sciences, 13(2), 103. https://doi.org/10.3390/educsci13020103
+## Casanova, D., Huet, I., & Garcia, F. (2023). The Experience of Co-Designing a Learning Space with Teachers and Students. Education Sciences, 13(2), 103. https://doi.org/10.3390/educsci13020103
+Casanova, Huet, and Garcia discuss how to design a functional workspace to engage students in technology in the classroom. While not specifically discussing hardware, the implementation of a useable classroom or area to maximize the benefits of the technology are discussed. Sketches were provided with different arrangements, showing proximity, size, and uses of specific technology integration. Classrooms are shifting away from traditional classroom settings; this article can provide a guide on how to build a new classroom setup that maximizes the technology included. If given the opportunity to change my classroom physical layout, this article gives research based evidence on what to do.
 
-	Casanova, Huet, and Garcia discuss how to design a functional workspace to engage students in technology in the classroom. While not specifically discussing hardware, the implementation of a useable classroom or area to maximize the benefits of the technology are discussed. Sketches were provided with different arrangements, showing proximity, size, and uses of specific technology integration. Classrooms are shifting away from traditional classroom settings; this article can provide a guide on how to build a new classroom setup that maximizes the technology included. If given the opportunity to change my classroom physical layout, this article gives research based evidence on what to do.
+## Hassan Al-Taai, S. H., Kanber, H. A., & Mohammed al-Dulaimi, W. A. (2023). The Importance of Using the Internet of Things in Education. International Journal of Emerging Technologies in Learning, 18(1), 19–39. https://doi.org/10.3991/ijet.v18i01.35999
+Hassan Al-Taai, Kanber, and Mohammed al-Dulaimi introduce the idea of leveraging the internet of things (IoT) ecosystem to make a more functional learning environment. The authors have a very loose definition of IoT but describe technology devices that can help the educational process. While not giving specific hardware, the authors describe solutions to management problems that arise. Not limited to just the smart classroom, other enhancements to safety and emergency management are brought up from the use of smart projectors to RFID badges, to light sensors in the classroom. The overarching idea is to focus on the education with tools that can help with the other aspects of educational management. There are a lot of examples of administrative capabilities that are interesting to look through. 
 
-# Hassan Al-Taai, S. H., Kanber, H. A., & Mohammed al-Dulaimi, W. A. (2023). The Importance of Using the Internet of Things in Education. International Journal of Emerging Technologies in Learning, 18(1), 19–39. https://doi.org/10.3991/ijet.v18i01.35999
-	Hassan Al-Taai, Kanber, and Mohammed al-Dulaimi introduce the idea of leveraging the internet of things (IoT) ecosystem to make a more functional learning environment. The authors have a very loose definition of IoT but describe technology devices that can help the educational process. While not giving specific hardware, the authors describe solutions to management problems that arise. Not limited to just the smart classroom, other enhancements to safety and emergency management are brought up from the use of smart projectors to RFID badges, to light sensors in the classroom. The overarching idea is to focus on the education with tools that can help with the other aspects of educational management. There are a lot of examples of administrative capabilities that are interesting to look through. 
+## UDL: The UDL guidelines. (n.d.). https://udlguidelines.cast.org/
+The Universal Design for Learning guidelines are ways to improve teaching for all learners. The goal is to optimize the learning process for everyone regardless of ability. Taking a scientific approach, the guidelines show how people learn by offering methods to effectively teach. The three main ideas are Engagement (the why), Representation (the what), and Action and Expression (How). Going through the guidelines, one can see how simple changes like providing closed captioning or transcripts are a simple thing with technology that can help everyone. The guidelines are to help educators create or modify lessons moving forward to help everyone learn.
 
-# UDL: The UDL guidelines. (n.d.). https://udlguidelines.cast.org/
+## WebAIM: Web Accessibility in mind. (n.d.). https://webaim.org/
+WebAim is a website that provides tutorials and guides to increase accessibility in software. Choose an application, and the website will offer a list of suggestions to increase accessibility. Many of the most popular softwares have these resources built in; however, they must be turned on or used correctly. WebAim provides those tutorials. Even if one knows many of these features, there are some that may be overlooked. Having a list in one place is helpful. Combined with the UDL guidelines, adapting materials to serve all is good educational practice.
 
-	The Universal Design for Learning guidelines are ways to improve teaching for all learners. The goal is to optimize the learning process for everyone regardless of ability. Taking a scientific approach, the guidelines show how people learn by offering methods to effectively teach. The three main ideas are Engagement (the why), Representation (the what), and Action and Expression (How). Going through the guidelines, one can see how simple changes like providing closed captioning or transcripts are a simple thing with technology that can help everyone. The guidelines are to help educators create or modify lessons moving forward to help everyone learn.
+## Google sites: sign-in. (n.d.). https://sites.google.com/
+Google sites is a quick way to create a website for just about anything. There are other sites for blogging; however, they often require a lengthy setup process or force you into a paid account by limiting things you can do. Google Sites makes setup simple, and gets you going very quickly. The service also integrates with the rest of the Google ecosystem, which is probably used in the classroom anyway. One of my favorite activities is to have students make a website for themselves, explaining that social media moves quickly, and the lack of ownership is problematic. A person’s own space on the internet is a good idea to have.
 
-# WebAIM: Web Accessibility in mind. (n.d.). https://webaim.org/
+## Mastodon - Decentralized social media. (n.d.). https://joinmastodon.org/
+Mastodon is a decentralized social media platform that can serve many different purposes from microblogging to photo sharing, to long form content, all for public engagement. It is a fully controllable social media platform. Essentially, you need to either find a server, or create your own. From there you are the server administrator that can allow others to join. If someone is well versed in server hosting, creating a social network for the classroom or school is one way to create a controlled community. 
 
-	WebAim is a website that provides tutorials and guides to increase accessibility in software. Choose an application, and the website will offer a list of suggestions to increase accessibility. Many of the most popular softwares have these resources built in; however, they must be turned on or used correctly. WebAim provides those tutorials. Even if one knows many of these features, there are some that may be overlooked. Having a list in one place is helpful. Combined with the UDL guidelines, adapting materials to serve all is good educational practice.
+## AR and VR Games and Apps for Learning | Common Sense Education. (2024, January 25). Common Sense Education. https://www.commonsense.org/education/lists/ar-and-vr-games-and-apps-for-learning
+There is no one best virtual reality application to showcase, so a vetted list of good sites is being presented. Common Sense Education provides a review of different virtual reality apps for people to choose from based on their needs. Mainly used to recreate experiences, virtual reality is great for when being in a location or doing an experience is not feasible with the constraints of students, resources, or locations. A safe, virtual, environment can almost simulate the real-life experience without the extra overhead. 
 
-# Google sites: sign-in. (n.d.). https://sites.google.com/
+## Google Maps. (n.d.) https://maps.google.com
+Google maps is considered the best mapping application for the majority of people. Integrated into just the maps are many augmented and virtual reality options for everyone to take advantage of. Using your phone or the site, layers can be overlaid to show different conditions such as weather, traffic, and stores. Street view can show what it is like to be standing outside. There are even layers in famous landmarks to contribute to the ”being there feeling.” 
 
-	Google sites is a quick way to create a website for just about anything. There are other sites for blogging; however, they often require a lengthy setup process or force you into a paid account by limiting things you can do. Google Sites makes setup simple, and gets you going very quickly. The service also integrates with the rest of the Google ecosystem, which is probably used in the classroom anyway. One of my favorite activities is to have students make a website for themselves, explaining that social media moves quickly, and the lack of ownership is problematic. A person’s own space on the internet is a good idea to have.
+## Ingress: a worldwide Territory Control AR game. (n.d.). Ingress. https://ingress.com/
+The best geocaching application that can enhance learning is Ingress. While there are many geocaching apps, Ingress provides the search for areas with a game that can be played. Instead of finding some trinket in the woods, going on routes through historic areas provides an educational experience with the description of the locations, as well as virtual badging and gamification. While best for older students, there is Pokemon Go, with the same mechanics for younger students. A mobile phone or internet connected table is all you need.
 
-# Mastodon - Decentralized social media. (n.d.). https://joinmastodon.org/
+## Canva (n.d.). Canva. https://canva.com
+Canva is a website that allows anyone to create beautifully designed medias for all different applications. From website templates to social media posts, to presentations, newsletters, and documents, Canva does it all. We know education is often visual, and creating visually appealing media will gain engagement. The website is so simple to use that anyone can create something within minutes. It is free, but all students get the educational account for free with many more options. 
 
-	Mastodon is a decentralized social media platform that can serve many different purposes from microblogging to photo sharing, to long form content, all for public engagement. It is a fully controllable social media platform. Essentially, you need to either find a server, or create your own. From there you are the server administrator that can allow others to join. If someone is well versed in server hosting, creating a social network for the classroom or school is one way to create a controlled community. 
-
-# AR and VR Games and Apps for Learning | Common Sense Education. (2024, January 25). Common Sense Education. https://www.commonsense.org/education/lists/ar-and-vr-games-and-apps-for-learning
-
-	There is no one best virtual reality application to showcase, so a vetted list of good sites is being presented. Common Sense Education provides a review of different virtual reality apps for people to choose from based on their needs. Mainly used to recreate experiences, virtual reality is great for when being in a location or doing an experience is not feasible with the constraints of students, resources, or locations. A safe, virtual, environment can almost simulate the real-life experience without the extra overhead. 
-
-# Google Maps. (n.d.) https://maps.google.com
-
-	Google maps is considered the best mapping application for the majority of people. Integrated into just the maps are many augmented and virtual reality options for everyone to take advantage of. Using your phone or the site, layers can be overlaid to show different conditions such as weather, traffic, and stores. Street view can show what it is like to be standing outside. There are even layers in famous landmarks to contribute to the ”being there feeling.” 
-
-# Ingress: a worldwide Territory Control AR game. (n.d.). Ingress. https://ingress.com/
-
-	The best geocaching application that can enhance learning is Ingress. While there are many geocaching apps, Ingress provides the search for areas with a game that can be played. Instead of finding some trinket in the woods, going on routes through historic areas provides an educational experience with the description of the locations, as well as virtual badging and gamification. While best for older students, there is Pokemon Go, with the same mechanics for younger students. A mobile phone or internet connected table is all you need.
-
-# Canva (n.d.). Canva. https://canva.com
-
-	Canva is a website that allows anyone to create beautifully designed medias for all different applications. From website templates to social media posts, to presentations, newsletters, and documents, Canva does it all. We know education is often visual, and creating visually appealing media will gain engagement. The website is so simple to use that anyone can create something within minutes. It is free, but all students get the educational account for free with many more options. 
-
-# Blog: https://chaimtime.com/blog
-
-
+## Blog: https://chaimtime.com/blog
 	
